Added XPGUI,  Fixed NewerNewChunks, Other Fixes.